Fix: small layout issues

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -388,6 +388,7 @@ a.card-img-left {
 
 #counter {
   cursor: text;
+  word-break: normal;
 }
 
 #volumeBar {
